@@ -11,7 +11,9 @@
     <sourcepassword>hackme</sourcepassword>
     <format>MP3</format>
     <filename>playlist.m3u</filename>
-	  <!--
+    <!-- Once done streaming playlist.m3u, exit: -->
+    <stream_once>1</stream_once>
+    <!--
       The following settings are used to describe your stream to the server.
       It's up to you to make sure that the bitrate/samplerate/channels
       information matches up with your input stream files. Note that
