@@ -9,6 +9,8 @@ Changes in 0.3.0, (SVN trunk):
    - Playlist scripting support: Indicate that the executable in <filename>
      should be run each time to get a new media filename to stream, by setting
      the new <playlist_program> configuration option to 1.
+   - New <stream_once> configuration option, which makes ezstream play a media
+     file or playlist once and then exit.
    - Add feature to skip the currently streaming track, done by sending the
      SIGUSR1 signal to the ezstream process.
    - New command line option `-q': Suppress standard error output from external
